0.2.2:  2001/
---------------------
1. Fix bug in tabe_tsiyindbint.c: the re-allocate tsiyin->yin buffer.
   Thanks to Kuang-che Wu <kcwu@ck.tp.edu.tw>.

2. Fix bug in bims.c: the rule to choose the only one character.
   Thanks to vgod <vgod@CirX.org>.


0.2.1:  2001/01/03
---------------------
1. tsiadd.c: Add comment phrasing for tsi.src.

2. Add patch for Tab breaking Tsi's.
   Thanks to Kuang-che Wu <kcwu@camel.ck.tp.edu.tw>.

3. tsi.src update:
   a. ZhuYin filled: 1-14000, 15001-19000.
   b. Remove several un-useful tsi's.
   c. Add 301 new tsi's


0.2:  2000/11/30
---------------------
1. tsi.src: Remove unuseful tsi.
	    Change the data format.
	    Start to fill in the ZhuYin field.

2. tsiadd.c: Improve its syntax reading part to accept more complicated
	format, and more exception tolerence.


0.1.9:  2000/10/30
---------------------
1. Add support to NetBSD in autoconf.
   Thanks to <vhuang.bbs@bbs.csie.nctu.edu.tw>


0.1.8:  2000/10/15
---------------------
1. Fix the bug in: bims.c: et26 "f+p+j" keystroke.
   Thanks to the report by <Jouston.bbs@bbs.thu.edu.tw>

2. Add the malloc patch and bims_GTK patch from keith.
   Thanks to Jing-Tang Keith Jang <keith@bsdvm.jtjang.idv.tw>


0.1.7:  2000/10/08
---------------------
1. Fix the bug in: bims.c: et26 "m+space" keystroke.
   Thanks to the report by <Jouston.bbs@bbs.thu.edu.tw>
			   <cmcwarp@kimo.com.tw>

0.1-6:  2000/07/24
---------------------
1. Fix the bug in: bims.c: bimsFeedKey: delete editing buffer: 1st memmove.
   Thanks to the report by <IDFIVE.bbs@openbazaar.net>.

2. Fix some errors in tsi.src: 162, 332, 1867, 1897, 2192, 13691, 24393, 
   43392, 44965, 56966, 76661, 96490, 107167, 107196, 107228, 114185, 115884, 
   123117, 123941, 124648, 128905, 128906, 130429, 131626, 132269  

3. Change the lib major name & soname to $(libname).0.1.

0.1-5:  2000/06/28
---------------------
1. Change all the function calls to ANSI C style.

2. Add the support to HP-UX & ANSI C compiler system.
